--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.1",
     "gulp-useref": "^3.0.0",
+    "mathjs": "^3.8.0",
     "psi": "^2.0.2",
     "run-sequence": "^1.0.1",
     "sw-precache": "^3.2.0",
@@ -37,5 +38,8 @@
   },
   "eslintConfig": {
     "extends": "google"
+  },
+  "dependencies": {
+    "chart.js": "^2.4.0"
   }
 }
